# switcher

./: readme.md
frames/: Cargo.toml
frames/src/: frames.rs  frames_futures.rs  frames_serialport.rs  lib.rs
mqtt/: Cargo.toml
mqtt/src/: lib.rs  mqtt_packet.rs
net-services/: Cargo.toml
net-services/src/: compat.rs  compat_async_io.rs  compat_async_std.rs  compat_async_tls.rs  compat_futures.rs  http.rs  lib.rs  text.rs  websocket.rs
net-services/src/http/: async_http_connection.rs
switcher/: Cargo.toml  build  sample_config.json
switcher/src/: compat.rs  main.rs  switcher.rs
switcher/src/switcher/: services.rs  sw_device.rs
switcher/src/switcher/services/: action.rs  discover_upnp.rs  http_server.rs  http_switcher_server.rs  hue_bridge.rs  mqtt_client.rs  mqtt_server.rs  zgate.rs
switcher/switcher_http/: css.css  index.html  js.js
switcher/utils/switcher_nspanel/: install.sh  nspanel_install.sh  run.sh
tokenizer/: Cargo.toml
tokenizer/src/: lib.rs
zigbee/: Cargo.toml
zigbee/src/: ezsp.rs  lib.rs  tuya.rs  zcl.rs  zdp.rs
