[package]
name = "switcher"
version = "1.0.0"
edition = "2021"

[dependencies]
chrono = "0.4"
sunrise = { version = "1.0.0", optional = true }
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
rand = "0.8.5"
tokenizer = { path = "../tokenizer" }
net-services = { path = "../net-services", features = ["websocket"] }
zigbee = { path = "../zigbee" }
mqtt = { path = "../mqtt" }
frames = { path = "../frames", features = ["futures", "serialport"] }

async-std = { version = "1.12.0", features = ["attributes"], optional = true }
async-tls = { version = "0.10.0", optional = true }
base64 = "0.21.0"
futures = { version = "0.3.27", optional = true }
serialport = { version = "4.3.0", optional = true }

[features]
default = ["async-std", "async-tls", "sunrise", "serialport"]
async-std = ["dep:async-std", "net-services/async-std"]
async-tls = ["dep:async-std", "dep:async-tls", "dep:futures", "net-services/async-tls"]
serialport = ["dep:serialport"]

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
